# kc-palantir-math

./: .claude.md  .dockerignore  .env.example  .env.sample  .gitattributes  .gitignore  .mcp.json.example  3PNG-WORKFLOW-COMPLETE.md  AGENT-ANALYSIS-SUMMARY.md  ARCHITECTURE-DIAGRAMS.md  CLAUDE-FEATURES-ANALYSIS-REPORT.md  CLAUDE-IMPLEMENTATION-STANDARDS.md  CLEANUP-SUMMARY.md  COMMUNITY-AGENTS-INTEGRATION-COMPLETE.md  COMPLETE-FEATURE-VERIFICATION.md  DASHBOARD-SETUP.md  DASHBOARD-VERIFICATION-REPORT.md  DASHBOARD_UI_TEST_REPORT.md  DEPENDENCY-REFACTORING-FINAL-PLAN.md  DEPLOYMENT-SUCCESS.md  Dockerfile  FEEDBACK-LOOP-QUICKSTART.md  FILES_SUMMARY.txt  FINAL-COMPLETE-VERIFICATION.md  FINAL-SUMMARY.txt  FINAL-VERIFICATION-COMPLETE.md  FINAL-VERIFICATION-REPORT.md  FINAL_DEDUPLICATION_SUMMARY.md  FUNDAMENTAL-IMPROVEMENT-REPORT.md  GRAPH-RECOGNITION-IMPLEMENTATION.md  HOOK-INTEGRATION-GUIDE.md  HOOK-INTEGRATION-PLAN.md  ICON_CHECKLIST.md  ICON_VERIFICATION_REPORT.md  IMPLEMENTATION-COMPLETE-FINAL.md  IMPLEMENTATION-COMPLETE-V3.md  IMPLEMENTATION-SUMMARY.md  IMPROVEMENTS_VERIFICATION.md  MATH-EDUCATION-SYSTEM-COMPLETE.md  MCP-USAGE-GUIDE.md  (+41 more)
.claude/: CLAUDE.md  SESSION_RECOVERY.md  dynamic_learning.jsonl  realtime-logging-config.json  settings.json
.cursor/: MCP-FINAL-STATUS.md  MCP-INTEGRATION-ANALYSIS.md  README.md  SETUP-COMPLETE.md  mcp_settings.json
.github/: INDEXING-TRIGGER.md  pull_request_template.md
agents/: __init__.py  agent_registry.py  ask_agent_tool.py  context_manager.py  criticality_config.py  dependency_agent.py  dependency_mapper.py  quality_agent.py  (+30 more)
(+509 files in other folders)
