[project]
name = "math"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.69.0",
    "claude-agent-sdk>=0.1.3",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "mcp>=1.17.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.3",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
